--- a/style/media-query.css
+++ b/style/media-query.css
@@ -52,6 +52,10 @@
 }
 
 @media screen and (max-width: 480px) {
+    body {
+        height:auto;
+        width: 100%;
+    }
     #imagem .titulo {
         font-size: 2.5em;
     }
@@ -62,6 +66,7 @@
 
     #redes ul {
         gap: 15px;
+        margin-bottom: 5px;
     }
 
     #redes ul li a {
