--- a/style/style.css
+++ b/style/style.css
@@ -9,13 +9,13 @@
 }
 
 body{
-    height: 100vh;
+    height:100vh;
     width: 100vw;
-    background-image:linear-gradient(to bottom,#8C0327,#F20530)
+    background-image:linear-gradient(to bottom,#8C0327,#F20530);
 }
 
 main{
-    height:100vh;
+    min-height:100vh;
     width: 100vw;
     position: relative;
   
